--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           run: echo "welcome to our first workflow"
 
         - name: checkout repo
-        - uses: actions/checkout@v6.0.2
+          uses: actions/checkout@v6.0.2
 
         - name: List repo files
           run: ls -la
