--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -15,4 +15,4 @@ jobs:
         runs-on: ubuntu-latest
         steps:
            - name: deploy application
-             run: echo "Deploy the application .."
+             run: echo "Deploy the application to ${{ inputs.environment }}"
