--- a/.github/workflows/commands.yml
+++ b/.github/workflows/commands.yml
@@ -5,8 +5,7 @@ jobs:
    example:
      runs-on: ubuntu-latest
      steps:
-        - run: |
-            deprecated=true
-               if [[ deprecated ]]; then
-                  echo "::warning::Deprecated function found"
-               fi
+        - name: set api key
+          run: echo "API_KEY=12345" >> $GITHUB_ENV
+        - name: using api key
+          run: echo "using api key $API_KEY"
