--- a/.github/workflows/commands.yml
+++ b/.github/workflows/commands.yml
@@ -5,7 +5,10 @@ jobs:
    example:
      runs-on: ubuntu-latest
      steps:
-        - name: set api key
-          run: echo "API_KEY=12345" >> $GITHUB_ENV
-        - name: using api key
-          run: echo "using api key $API_KEY"
+        - name: check if exists file
+          run: |
+           if [ -if config.yaml ]; then
+           run : echo "::debug::config.yaml is exist"
+            else 
+            run : echo "::error::config.yaml is missed"
+            fi
