Fix typo in file existence check condition

--- a/.github/workflows/commands.yml
+++ b/.github/workflows/commands.yml
@@ -7,7 +7,7 @@ jobs:
      steps:
         - name: check if exists file
           run: |
-           if [ -if config.yaml ]; then
+           if [ -f config.yaml ]; then
            run : echo "::debug::config.yaml is exist"
             else 
             run : echo "::error::config.yaml is missed"
