--- a/.github/workflows/commands.yml
+++ b/.github/workflows/commands.yml
@@ -5,10 +5,9 @@ jobs:
    example:
      runs-on: ubuntu-latest
      steps:
-        - name: check if exists file
+        - name: set api key
+          run: echo "API_KEY=12345"; $GITHUB_ENV
+        - name: using api key
           run: |
-           if [ -f config.yaml ]; then
-           run : echo "::debug::config.yaml is exist"
-            else 
-            run : echo "::error::config.yaml is missed"
-            fi
+           run: echo "::add-mask::$API_KEY"
+           run: echo "using api key $API_KEY"
