--- a/.github/workflows/commands.yml
+++ b/.github/workflows/commands.yml
@@ -6,7 +6,7 @@ jobs:
      runs-on: ubuntu-latest
      steps:
         - name: set api key
-          run: echo "API_KEY=12345"; $GITHUB_ENV
+          run: echo "API_KEY=12345"; >> $GITHUB_ENV
         - name: using api key
           run: |
            run: echo "::add-mask::$API_KEY"
